# DPMJET

./: .gitignore  CHANGELOG.md  Makefile  README.md  meson.build  ppLHC_default.txt
common/: _dpmjetIII191.pyf  dpmjetIII192.pyf  dpmjetIII193.pyf  dummies.f  logging.f  oauxfi.f  rangen.f
docs/: phojet_subroutines.md  validation.md
examples/dpmjet/: ppLHC.inp
include/dpmjet/inc/: dpmeva  dpmpev  dpmstf  dtcapa  dtflka  dtflka12ca  dtnpot  hnfspa
include/flinclude/: (BEAMCM)  (COMPUT)  (DBLPRC)  (DIMPAR)  (EVAFLG)  (FHEAVY)  (FRBKCM)  (GENSTK)  (IOIOCM)  (IOUNIT)  (NUCDAT)  (PAREVT)  (PART)  (RESNUC)
include/flinclude/inc/: flkdim  flkdim.cern  flkeva  flkeva.cern  flkevf  flkevf.cern  flkpev  flkpev.cern  flkprt  flkprt.cern
include/phojet/inc/: pobeam
include/pythia/inc/: hepevt
src/dpmjet/: DPMINI.f  DPMOUT.f  DPMRUN.f  DT_AAEVT.f  DT_ABSORP.f  DT_BEAMPR.f  DT_BETREJ.f  DT_CH2RES.f  DT_CHASTA.f  DT_CHKCEN.f  DT_CHKCSY.f  DT_CHKINE.f  DT_CKMT.f  DT_CKMTQ0.f  DT_CKMTX.f  DT_COM2CR.f  DT_CONUCL.f  DT_COORDI.f  DT_CQPAIR.f  DT_CROMSC.f  DT_CRONIN.f  DT_CSTRMA.f  DT_DBKLAS.f  DT_DBREAK.f  DT_DCHANH.f  DT_DCHANT.f  DT_DDATAR.f  DT_DECAY1.f  DT_DECAYS.f  DT_DECPI0.f  DT_DEFAUL.f  DT_DEFSET.f  DT_DENSIT.f  DT_DENSITY.f  DT_DHADRI.f  DT_DIAGR.f  DT_DIFEVT.f  DT_DIFFKI.f  DT_DIFINI.f  DT_DIFPUT.f  (+141 more)
src/exe/: DPMJET.f  DPMJET_direct.f  pho_aux.f  photo_hadronic.f
src/phojet/: PHO_DATINI.f  PHO_FITPAR.f  PHO_FRAINI.f  PHO_GETPDF.f  PHO_HARSCA.f  PHO_INIT.f  PHO_SETCT14.f  PHO_SETPAR.f  PHO_SETPCOMB.f  PHO_SETPDF.f  PHO_STRFRA.f
src/pythia/: pypdfu.f  pystrf.f
